# markdownviewer

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  PROGRESS.md  README.md  example.md
.github/workflows/: release.yml
assets/: styles.css  template.html
packaging/: PKGBUILD  markdownviewer.desktop
src/: app_icon.rs  assets.rs  main.rs  render.rs
