[package]
name = "markdownviewer"
version = "1.1.5"
edition = "2021"
rust-version = "1.85"
description = "Minimal, fast Markdown viewer with syntax highlighting and Mermaid diagrams"
license = "MIT"
repository = "https://github.com/iskrid/markdownviewer"

[[bin]]
name = "markdownviewer"
path = "src/main.rs"

[dependencies]
tao = "0.35"
wry = "0.55"
comrak = { version = "0.52", default-features = false }
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
notify = "8.0"
notify-debouncer-mini = "0.7"
webbrowser = "1.2"
dirs = "6.0"
regex = "1.11"
base64 = "0.22"
anyhow = "1"
http = "1.3"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "^0.18"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

[package.metadata.deb]
maintainer = "iskrid"
copyright = "2025, iskrid"
license-file = ["LICENSE", "4"]
depends = "libwebkit2gtk-4.1-0, libgtk-3-0, libc6"
section = "utils"
priority = "optional"
assets = [
    ["target/release/markdownviewer", "usr/bin/", "755"],
    ["packaging/markdownviewer.desktop", "usr/share/applications/", "644"],
    ["icons/app-icon-16.png", "usr/share/icons/hicolor/16x16/apps/markdownviewer.png", "644"],
    ["icons/app-icon-32.png", "usr/share/icons/hicolor/32x32/apps/markdownviewer.png", "644"],
    ["icons/app-icon-48.png", "usr/share/icons/hicolor/48x48/apps/markdownviewer.png", "644"],
    ["icons/app-icon-64.png", "usr/share/icons/hicolor/64x64/apps/markdownviewer.png", "644"],
    ["icons/app-icon-128.png", "usr/share/icons/hicolor/128x128/apps/markdownviewer.png", "644"],
    ["icons/app-icon-256.png", "usr/share/icons/hicolor/256x256/apps/markdownviewer.png", "644"],
    ["icons/app-icon-512.png", "usr/share/icons/hicolor/512x512/apps/markdownviewer.png", "644"],
]
